--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,28 @@
-.App {
-  text-align: center;
+.show {
+  animation: show-item 2s ease-in forwards
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.hide {
+  animation: hide-item 2s ease-in forwards
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* 入场动画 */
+.fade-enter {
+  opacity: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.fade-enter-active {
+  opacity: 1;
+  transition: all 1s ease-in;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fade-enter-done {
+  opacity: 1;
+}
+/* 出场动画 */
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0;
+  transition: all 1s ease-in;
+}
+.fade-exit-done {
+  opacity: 0;
 }
