--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
   animation: hide-item 2s ease-in forwards
 }
 /* 入场动画 */
-.fade-enter {
+.fade-enter, .fade-appear {
   opacity: 0;
 }
-.fade-enter-active {
+.fade-enter-active, .fade-appear-active {
   opacity: 1;
   transition: all 1s ease-in;
 }
